# smartcard-rs

./: CHANGELOG  Cargo.toml  LICENSE  README.md
docs/: dev-doc.md
others/: pcsclite.h  winscard.h
src/: lib.rs
src/logic/: card.rs  context.rs  mod.rs  reader.rs  utils.rs
src/parameters/: card_disposition.rs  context_scope.rs  initialization_type.rs  mod.rs  protocol.rs  share_mode.rs
src/safe/: context.rs  mod.rs  reader.rs  utils.rs
src/scard/: mod.rs  winscard.rs
