# @Author: ronan
# @Date:   20-12-2016
# @Email:  ronan.lashermes@inria.fr
# @Last modified by:   ronan
# @Last modified time: 22-12-2016



[package]
name = "smartcard"
version = "0.1.0"
authors = ["Ronan 'Artefaritaj' Lashermes <ronan.lashermes@inria.fr>"]
description = "A PC/SC wrapper to communicate with smartcards."
repository = "https://gitlab.com/Artefaritaj/smartcard-rs"
license = "MIT"

[dependencies]
libc = "0.2"
error-chain = "0.7"
log = "0.3"
