# @Author: ronan
# @Date:   20-12-2016
# @Email:  ronan.lashermes@inria.fr
# @Last modified by:   ronan
# @Last modified time: 23-12-2016



[package]
name = "smartcard"
version = "0.3.0"
authors = ["Artefaritaj <artefaritaj@0nline.fr>"]
description = "A PC/SC wrapper to communicate with smartcards."
repository = "https://gitlab.com/Artefaritaj/smartcard-rs"
license = "MIT"

[dependencies]
error-chain = "0.7"
log = "0.3"
pcsc-sys = "0.1"
